--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -17,9 +17,11 @@ body{
     border-radius: 10px;
 }
 .LoginPage h1{
-    text-align: center;
-    padding: 0 0 20px 0;
-    border-bottom: 1px solid silver;
+  margin: 0 0 30px;
+  padding: 0;
+  text-align: center;
+  color: #2691d9;
+  padding-top: 30px;
 
 }
 .LoginPage form{
@@ -79,7 +81,7 @@ form .txt_field{
 .pass:hover{
     text-decoration: underline;
 }
-input[type="submit"]{
+.LoginPage button{
     width: 100%;
     height: 50px;
     border: 1px solid;
@@ -91,7 +93,7 @@ input[type="submit"]{
     cursor: pointer;
     outline: none;
 }
-input[type="submit"]:hover{
+.LoginPage button:hover{
     border-color: #2691d9;
     transition: .5s;
 }
