--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,5 +1,5 @@
 
-body{
+.loginpagebody{
     margin: 0;
     padding: 0;
     font-family: montserrat;
@@ -81,7 +81,7 @@ form .txt_field{
 .pass:hover{
     text-decoration: underline;
 }
-.LoginPage button{
+.LoginPage .button{
     width: 100%;
     height: 50px;
     border: 1px solid;
@@ -93,9 +93,10 @@ form .txt_field{
     cursor: pointer;
     outline: none;
 }
-.LoginPage button:hover{
+.LoginPage .button:hover{
     border-color: #2691d9;
     transition: .5s;
+    background: rgb(59, 38, 153);
 }
 .signup_link{
     margin: 30px 0;
