--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -2,7 +2,7 @@
 .loginpagebody{
     margin: 0;
     padding: 0;
-    font-family: montserrat;
+    font-family: "Poppins", sans-serif;
     background: linear-gradient(120deg,#2980b9,#8e44ad);
     height: 100vh;
     overflow: hidden;
@@ -75,7 +75,7 @@ form .txt_field{
 }
 .pass{
     margin: -5px 0 20px 5px;
-    color: #a6a6a6;
+    color: #2691d9;
     cursor: pointer;
 }
 .pass:hover{
