--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -87,6 +87,7 @@ form .txt_field{
     border: 1px solid;
     background: #2691d9;
     border-radius: 25px;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     color: #e9f4fb;
     font-weight: 700;
