--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,8 +1,8 @@
 
-body{
+.loginpagebody{
     margin: 0;
     padding: 0;
-    font-family: montserrat;
+    font-family: "Poppins", sans-serif;
     background: linear-gradient(120deg,#2980b9,#8e44ad);
     height: 100vh;
     overflow: hidden;
@@ -75,13 +75,13 @@ form .txt_field{
 }
 .pass{
     margin: -5px 0 20px 5px;
-    color: #a6a6a6;
+    color: #2691d9;
     cursor: pointer;
 }
 .pass:hover{
     text-decoration: underline;
 }
-.LoginPage button{
+.LoginPage .button{
     width: 100%;
     height: 50px;
     border: 1px solid;
@@ -93,9 +93,10 @@ form .txt_field{
     cursor: pointer;
     outline: none;
 }
-.LoginPage button:hover{
+.LoginPage .button:hover{
     border-color: #2691d9;
     transition: .5s;
+    background: rgb(59, 38, 153);
 }
 .signup_link{
     margin: 30px 0;
