Post details, new post, signup design changed and added

--- a/src/signUp.css
+++ b/src/signUp.css
@@ -7,7 +7,7 @@
   font-family: "Poppins", sans-serif;
 }
 .signupbody{
-  background-color: #4b111b;
+  background-color: #E9E7DA;
   width: 100%;
   min-height: 100vh;
 
