--- a/src/newPost.css
+++ b/src/newPost.css
@@ -14,7 +14,7 @@
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    background: linear-gradient(120deg,#2980b9,#8e44ad);
+    background: #E9E7DA;
     height: 100vh;
     overflow: hidden;
 }
@@ -24,22 +24,49 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 900px;
-    background: white;
+    background: #CDCDCD;
     border-radius: 10px;
 }
 .heading{
     margin: 0 0 30px;
     padding: 0;
     text-align: center;
-    color: #2691d9;
+    color: black;
     padding-top: 30px;
+    font-weight: 800;
+    
 
 }
 .newpostPage form{
     padding: 0 40px;
     box-sizing: border-box;
 }
-form .postTitle_field{
+#exampleFormControlInput1{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+#exampleFormControlTextarea1{
+    margin-bottom: 20px;
+}
+/*.input-box{
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px 0;
+    width: 100%;
+    border: 1px solid #999;
+    outline:none;
+}
+
+/*.input-box-text{
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px 0;
+    width: 100%;
+    border: 1px solid #999;
+    outline:none;
+    height: 100px;
+}
+/*form .postTitle_field{
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
@@ -130,29 +157,35 @@ form .posttext_field{
 .posttext_field input:focus ~ span::before,
 .posttext_field input:valid ~ span::before{
     width: 100%;
-}
+}*/
 .postimage_field{
-    margin: -5px 0 20px 5px;
+    padding: 10px;
+    margin-left: 40px;
+    /*margin: -5px 0 20px 5px;*/
     color: black;
     cursor: pointer;
 }
 .postCategory_field{
-    margin: -5px 0 20px 5px;
+    padding: 10px;
+    margin-left: 40px;
     color: black;
     cursor: pointer;
     
 }
-.newpostPage form .btn{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.image_label{
+    margin-right: 10px;
+}
+.category_label{
+    margin-right: 10px;
 }
 .postButton {
     margin:30px 0;
     width:100px;
     height: 40px;
-    border: 1px solid;
-    background: blueviolet;
+    background-color: #555555;
+    color: white;
+    border: 2px solid #1A0315;
+    
     font-family: "Poppins", sans-serif;
     border-radius: 25px;
     font-size: 18px;
@@ -161,34 +194,18 @@ form .posttext_field{
     cursor: pointer;
     outline: none;
     padding: 5px 0;
+    position: relative;
+    left: 698px;
     
   }
   .postButton:hover{
-    border-color: #2691d9;
+    background-color: #1A0315;
+    color: white;
     transition: .5s;
-    background: rgb(59, 38, 153);
-  }
-  .imageButton{
-    margin:30px 0;
-    width:150px;
-    height: 40px;
-    border: 1px solid;
-    background: blueviolet;
-    font-family: "Poppins", sans-serif;
-    border-radius: 25px;
-    font-size: 18px;
-    color: #e9f4fb;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
-    padding: 5px 0; 
-  }
-  .imageButton:hover{
-    border-color: #2691d9;
-    transition: .5s;
-    background: rgb(59, 38, 153);
-  }
-
+    
+}
+  
+  
 
 
   
