--- a/src/post.css
+++ b/src/post.css
@@ -17,6 +17,8 @@
     text-align: center;
     color: black;
     padding-top: 30px;
+    font-family: var(--font-sans);
+    font-weight: 700;
 
 }
 
@@ -31,10 +33,12 @@
 .head,
 .err,
 .card__title {
+  font-family: var(--font-sans);
   line-height: var(--font-lineheight-0);
+  font-weight: 700;
 }
 
-img,
+.card__img,
 picture {
   max-width: 100%;
   display: block;
@@ -61,7 +65,7 @@ picture {
 }
 
 .card {
-  height: 560px;
+  min-height: 600px;
   width: min(100% - 2rem, 40rem);
   margin-bottom: 20px;
   background-color: var(--gray-0);
@@ -101,6 +105,7 @@ picture {
 }
 
 .card__title {
+  margin-top: 20px;
   font-size: var(--font-size-4);
   text-transform: capitalize;
   color: var(--gray-9);
