--- a/src/newPost.css
+++ b/src/newPost.css
@@ -1,31 +1,30 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: auto;
-    padding: 10px;
+
+:root {
+    --transition: 250ms ease-in-out;
+    --brand: var(--blue-8);
   }
-  .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    font-family: "Poppins", sans-serif;
-    font-size: 10px;
-    
-  }
-  
-  .newpostBody{
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-    background: #E9E7DA;
-    height: 100vh;
-    overflow: hidden;
-}
 .newpostPage{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 900px;
-    background: #CDCDCD;
-    border-radius: 10px;
+    display: grid;
+  place-items: center;
+  min-height: 100vh;
+  background-color: var(--blue-0);
+
+  font-family: var(--font-sans);
+  font-size: var(--font-size-3);
+  line-height: var(--font-lineheight-3);
+}
+.newpost{
+    
+    min-height: 477px;
+    width: min(100% - 2rem, 40rem);
+   margin-bottom: 20px;
+   background-color: var(--gray-0);
+   box-shadow: var(--shadow-2);
+   border-radius: var(--radius-2);
+
+  transition: var(--transition);
+  transition-property: box-shadow;
+  overflow: hidden;
 }
 .heading{
     margin: 0 0 30px;
@@ -182,9 +181,9 @@ form .posttext_field{
     margin:30px 0;
     width:100px;
     height: 40px;
-    background-color: #555555;
+    background-color: var(--gray-8);
     color: white;
-    border: 2px solid #1A0315;
+   
     
     font-family: "Poppins", sans-serif;
     border-radius: 25px;
@@ -195,11 +194,11 @@ form .posttext_field{
     outline: none;
     padding: 5px 0;
     position: relative;
-    left: 698px;
+    left: 420px;
     
   }
   .postButton:hover{
-    background-color: #1A0315;
+    background-color: var(--brand);
     color: white;
     transition: .5s;
     
