--- a/src/post.css
+++ b/src/post.css
@@ -66,7 +66,8 @@ picture {
 
 .card {
   min-height: 650px;
-  width: min(100% - 2rem, 40rem);
+  /*width: min(100% - 2rem, 40rem);*/
+  width: 700px;
   margin-bottom: 20px;
   background-color: var(--gray-0);
   box-shadow: var(--shadow-2);
