--- a/src/newPost.css
+++ b/src/newPost.css
@@ -16,7 +16,8 @@
 .newpost{
     
     min-height: 477px;
-    width: min(100% - 2rem, 40rem);
+    /*width: min(100% - 2rem, 40rem);*/
+    width: 700px;
    margin-bottom: 20px;
    background-color: var(--gray-0);
    box-shadow: var(--shadow-2);
@@ -26,23 +27,27 @@
   transition-property: box-shadow;
   overflow: hidden;
 }
+.newpost:is(:hover, :focus-within) {
+    box-shadow: var(--shadow-3);
+  }
 .heading{
     margin: 0 0 30px;
     padding: 0;
     text-align: center;
     color: black;
     padding-top: 30px;
-    font-weight: 800;
+    font-weight: 400;
     
 
 }
-.newpostPage form{
+.newposti{
     padding: 0 40px;
     box-sizing: border-box;
 }
 #exampleFormControlInput1{
     margin-top: 20px;
     margin-bottom: 20px;
+    
 }
 #exampleFormControlTextarea1{
     margin-bottom: 20px;
@@ -55,7 +60,6 @@
     border: 1px solid #999;
     outline:none;
 }
-
 /*.input-box-text{
     border-radius: 20px;
     padding: 10px;
@@ -83,7 +87,6 @@ form .posttext_field{
     border: none;
     background: none;
     outline: none;
-
 }
 .posttext_field input{
     width:100%;
@@ -130,7 +133,6 @@ form .posttext_field{
 .postTitle_field input:valid ~ label{
     top: -5px;
     color: #2691d9;
-
 }
 .postTitle_field input:focus ~ span::before,
 .postTitle_field input:valid ~ span::before{
@@ -151,7 +153,6 @@ form .posttext_field{
 .posttext_field input:valid ~ label{
     top: -5px;
     color: #2691d9;
-
 }
 .posttext_field input:focus ~ span::before,
 .posttext_field input:valid ~ span::before{
@@ -194,7 +195,8 @@ form .posttext_field{
     outline: none;
     padding: 5px 0;
     position: relative;
-    left: 420px;
+    left: 533px;
+    bottom: 21px;
     
   }
   .postButton:hover{
@@ -203,8 +205,3 @@ form .posttext_field{
     transition: .5s;
     
 }
-  
-  
-
-
-  
