--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -9,11 +9,11 @@
 }
  .homeBody{
     background-color: #212121;
-    height: 100vh;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', Arial, Verdana;
+    
 }
 .nav{
     background-color: #212121;
@@ -52,7 +52,56 @@
 .nav ul li a:hover{
     color: var(--color-first);
 }
-.bigger{
+
+.homei{
+    width: 100%;
+    height: 100vh;
+    background-color: #212121;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.leftii{
+    height: auto;
+    width: 600px;
+    max-width: 100%;
+}
+.txtii{
+    width: 694px;
+    max-width: 100%;
+    padding: 0 10px;
+    text-align: left;
+    margin-right: 385px;
+}
+.contenti{
+    width: 1280px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+.txtii h1{
+    color: #fff;
+    font-size: 50px;
+    font-weight: 900;
+    font-family: 'Poppins', Arial, Verdana;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+    text-align: left;
+    margin-bottom: 50px;
+}
+.txtii p{
+    color: grey;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+    text-align: justify;
+    text-justify: auto;
+}
+/*.bigger{
     padding-top: 25vh;
     padding-bottom: 4vh;
 }
@@ -65,6 +114,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 50px;
     font-weight: 900;
+    margin-bottom: 50px;
 }
 .cntnt{
     
@@ -99,4 +149,4 @@
     font-weight: 500;
     text-align: justify;
     text-justify: auto;
-}
+}*/
