--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -91,11 +91,11 @@
 }
 .cfef{
     
-    font-weight: 600;
+    font-weight: 700;
     font-size: 15px;
     background-color: #196cbb;
     color: white;
-    border: 2px solid #0828d8;
+    border: 2px solid #196cbb;
     border-radius: 5px;
     padding: 8px 12px;
     text-align: center;
