--- a/src/css/newPost.css
+++ b/src/css/newPost.css
@@ -209,9 +209,9 @@ form .posttext_field{
     margin:30px 0;
     width:90px;
     height: 40px;
-    background-color: #196cbb;
+    background-color: var(--brand);
     color: white;
-    border: 2px solid #0828d8;
+    border: 2px solid var(--brand);
     border-radius: 5px;
     padding: 5px 0px;
     text-align: center;
