sign up and profile page fixed

--- a/src/css/editProfile.css
+++ b/src/css/editProfile.css
@@ -78,7 +78,7 @@
 }
 .editbtn{
     margin: 20px 40px 20px 40px;
-    
+    margin-top: 50px;
     background-color: #196cbb;
     color: white;
     border: 2px solid #196cbb;
